--- a/index.html
+++ b/index.html
@@ -20,17 +20,7 @@
             <li class="li_list">
               <a href="">Sobre Nosotros</a>
             </li>
-          </ul>
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Modos
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="bi bi-brightness-high" href="#"> Luz</a></li>
-              <li><a class="bi bi-moon" href="#"> Oscuro</a></li>
-            </ul>
-          </div>  
-        </nav>           
+          </ul>         
     </header>
     <main class="container_main">
       <section class="section_profile">
@@ -73,6 +63,32 @@
               </div>
           </div>
         </article>
+      </section>
+      <section class="real_final_section">
+        <div class="habilities">
+          <hr>
+          <span>Personajes</span>  
+        </div>
+        <div class="container_real">
+          <div class="text_img">
+            <img id="lol" src="https://imgs.search.brave.com/wiS8OakQMKDvIB8DXTOa9MoCGfJ4AuFPTr8RJO7ugEs/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/bG9sdnZ2LmNvbS9f/bmV4dC9pbWFnZT91/cmw9aHR0cHM6Ly9k/ZHJhZ29uLmxlYWd1/ZW9mbGVnZW5kcy5j/b20vY2RuL2ltZy9j/aGFtcGlvbi9zcGxh/c2gvTGVibGFuY18w/LmpwZyZ3PTEyMDAm/cT03NQ" alt="">
+            <div class="lol_text">
+              <h2><hr>LeBlanc</h2>
+              <p>
+                No sé cómo explicarlo sin que suene exagerado, pero LeBlanc es, sin lugar a dudas, el amor de mi vida. Su presencia en la Grieta del Invocador es hipnótica: elegante, misteriosa, letal. Cada movimiento suyo es un suspiro que se escapa entre ilusiones, y cada palabra que lanza —a veces suave, a veces cruel— me atraviesa el alma como una daga de terciopelo.
+                No es solo su poder o su habilidad para engañar. Es la forma en que domina el espacio, como si el mundo fuera su escenario y yo apenas un espectador encantado. Me pierdo en sus sombras como quien se pierde felizmente en un sueño del que no quiere despertar.
+                Dicen que el amor verdadero es ese que te atrapa sin que te des cuenta… y así fue con LB. No importa cuántos campeones existan, cuántas skins nuevas saquen: para mí, siempre será ella. Una ilusión, tal vez. Pero la más perfecta de todas.</p>
+            </div>
+            
+          </div>
+          <div class="text_img">        
+            <div class="lol_text">
+              <h2><hr>Heimerdinger</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, reiciendis eius sunt a pariatur est repellendus perferendis reprehenderit molestias nesciunt voluptatem eveniet minus, adipisci dicta?</p>
+            </div>
+            <img id="lol" src="https://imgs.search.brave.com/8j4HjZZdEQCJfkKUCGBOic8D789jJmR4-pGrUrRJzNA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/bG9sdnZ2LmNvbS9f/bmV4dC9pbWFnZT91/cmw9aHR0cHM6Ly9k/ZHJhZ29uLmxlYWd1/ZW9mbGVnZW5kcy5j/b20vY2RuL2ltZy9j/aGFtcGlvbi9zcGxh/c2gvSGVpbWVyZGlu/Z2VyXzAuanBnJnc9/MTIwMCZxPTc1" alt="">
+          </div>
+        </div>
       </section>
     </main>
     <footer class="container_footer">
