--- a/index.html
+++ b/index.html
@@ -90,6 +90,33 @@
           </div>
         </div>
       </section>
+
+      <section class="section_carousel">
+        <div class="container_carousel">
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://c4.wallpaperflare.com/wallpaper/100/920/888/arboles-naturaleza-paisaje-rio-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://c4.wallpaperflare.com/wallpaper/744/482/418/aerostaticos-globos-naturaleza-paisaje-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://c4.wallpaperflare.com/wallpaper/393/561/183/flores-lago-naturaleza-paisaje-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      
     </main>
     <footer class="container_footer">
       <a class="logo_coulex" href="https://www.coulex.com/index.php" target="_blank">
