--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <h1 id="title">Titulo</h1>
           <ul class="ul_list">
             <li class="li_list">
-              <a href="">Inicio</a>
+              <a href="" class="link">Inicio</a>
             </li>
             <li class="li_list">
-              <a href="">Sobre Nosotros</a>
+              <a href="" class="link">Sobre Nosotros</a>
             </li>
           </ul>         
     </header>
@@ -81,7 +81,7 @@
             </div>
             
           </div>
-          <div class="text_img">        
+          <div class="text_img" id ="lol_text">        
             <div class="lol_text">
               <h2><hr>Heimerdinger</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, reiciendis eius sunt a pariatur est repellendus perferendis reprehenderit molestias nesciunt voluptatem eveniet minus, adipisci dicta?</p>
@@ -93,6 +93,10 @@
 
       <section class="section_carousel">
         <div class="container_carousel">
+          <div class="habilities">
+            <hr>
+            <span>Carousel</span>  
+          </div>
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
